# TdA25-FITO-ZLIN

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: api.rs  api_config.rs  main.rs
src/api/: api_utils.rs  games.rs  games_get.rs  games_uuid.rs  mod.rs
static/: 404.html  index.html
static/game/: game.html  script.js  style.css
static/root/: index.html  style.css
