[package]
name = "TdA25-FITO-ZLIN"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-service = "2.0.2"
actix-web = "4.9.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
serde = "1.0.214"
serde_json = "1.0.132"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "tls-rustls-ring" ] }
thiserror = "2.0.2"
uuid = { version = "1.11.0", features = [ "v4", "fast-rng" ]}
